--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,9 +1,6 @@
 // COLORS
-$primary-color: #02aab0;
+$primary-color: #07116b;
 $secondary-color: #00cdac;
-
-// $primary-color: #7f449d;
-// $secondary-color: #793fc1;
 
 $white-color: #fff;
 
